# ai-gateway

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-macos.yml
AIGateway/AIGateway/: AIGatewayApp.swift  AddProviderSheet.swift  AppUpdateViewModel.swift  ContentView.swift  GatewayAPIClient.swift  GatewayMenuBarView.swift  GatewayModels.swift  GatewayServiceSupervisor.swift  GatewayViewModel.swift  LogsTabView.swift
AIGateway/AIGateway.xcodeproj/: project.pbxproj
AIGateway/scripts/: embed-server.sh  release-macos.sh
assets/: codex-config.toml
debug-web/: Cargo.toml
debug-web/src/: lib.rs
gemini-proxy/: Cargo.toml  README.md
gemini-proxy/src/: account_pool.rs  auth.rs  config.rs  handlers.rs  main.rs  models.rs  upstream.rs
server/: Cargo.toml
server/src/: auth.rs  config.rs  main.rs
server/src/adapters/responses/: mod.rs  openai_chat.rs  openai_private.rs  openai_responses.rs  shared.rs
server/src/api/: handlers.rs  routes.rs
server/src/models/: app.rs  gateway.rs  google_v1internal.rs  mod.rs  openai_chat.rs  openai_responses.rs
server/src/store/: account_pool.rs  log_store.rs  mod.rs  model_store.rs  provider_store.rs  route_store.rs  sqlite.rs
server/src/upstream/: client.rs  google_v1internal.rs  mod.rs  new_api_site.rs  openai_chat.rs  openai_private.rs  openai_responses.rs  shared.rs
src/: account_pool.rs  auth.rs  config.rs  handlers.rs  main.rs  mapper.rs  models.rs  provider_store.rs  route_store.rs  upstream.rs
src/adapters/responses/: google_v1internal.rs  openai_chat.rs  openai_private.rs  openai_responses.rs  shared.rs
src/api/: handlers.rs  routes.rs
src/models/: app.rs  mod.rs  openai_responses.rs
src/store/: account_pool.rs  log_store.rs  mod.rs  provider_store.rs  route_store.rs  sqlite.rs
src/upstream/: client.rs  mod.rs  openai_private.rs  openai_responses.rs  shared.rs
